--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -111,6 +111,18 @@
                         </li>
 
                         <li>
+                            <a href='@Url.Action("MyDeliveries", "Delivery")'>
+                                <i data-feather="grid"></i> <span>Mis entregas</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href='@Url.Action("Index", "Delivery")'>
+                                <i data-feather="grid"></i> <span>Nuevos pedidos</span>
+                            </a>
+                        </li>
+
+                        <li>
                             <a href='@Url.Action("Index", "Invoice")'>
                                 <i data-feather="grid"></i> <span>Ventas</span>
                             </a>
@@ -121,7 +133,7 @@
                                 <i data-feather="map"></i> <span>Usuarios</span>
                             </a>
                         </li>
-                </nav>
+</nav>
             </div>
 
         </div>
