--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -14,11 +14,13 @@
         <link rel="stylesheet" href="~/css/style.css">
         <link rel="stylesheet" href="~/css/responsive.css">
         <link href="~/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/sweetalert2.min.css">
 
         <!--fontawesome-all.min.js-->
         <script src="~/js/fontawesome-all.min.js"></script>
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/datatables.net/jquery.dataTables.min.js"></script>
+        <script src="~/js/sweetalert2.all.min.js"></script>
     </environment>
     @RenderSection("HeaderScripts", required: false)
 </head>
