--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/MyDeliveries.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/MyDeliveries.cshtml
@@ -9,7 +9,7 @@
 
         var user;
         let user_storage = localStorage.getItem('user');
-        console.log(user_storage);
+        
         if (user_storage)
             user = JSON.parse(user_storage);
 
@@ -40,6 +40,11 @@
 
             $("#tbody_product").append(rowProduct);
             $("#product-modal").modal();
+        }
+
+        const updateOrdersTable = () => {
+            let delivery_list = getMyDeliveries();
+            tbl_my_deliveries.clear().rows.add(delivery_list).draw();
         }
         
     </script>
@@ -114,9 +119,10 @@
             contentType: 'application/x-www-form-urlencoded',
             success: function (response) {
                 let resp = response;
-                console.log(response);
+                
                 if (resp.code === '000') {
-                    Swal.fire('Notificación', 'El pedido ha cambiado a etapa: EN CAMINO.','success');
+                    updateOrdersTable();
+                    Swal.fire('Notificación', 'Se ha notificado al cliente que estás en camino.', 'success');
                 }
                 else {
                     Swal.fire('Notificación', resp.message, 'error');
@@ -130,7 +136,6 @@
 
     $(document).ready(function () {
         let delivery_list = getMyDeliveries();
-        console.log(delivery_list);
 
         tbl_my_deliveries = $("#tbl_my_deliveries").DataTable({
             "language": {
@@ -161,7 +166,11 @@
                     targets: -1,
                     data: 'id_order',
                     "render": function (id_order, type, row, meta) {
-                        return '<button class="btn btn-success btn-sm" onclick="setStage(' + id_order + ', 2)">Notificar inicio de recorrido</a>';
+                        if (row.id_stage == 2) {
+                            return '<button class="btn btn-primary btn-sm" onclick="setStage(' + id_order + ', 3)">NOTIFICAR INICIO DE RECORRIDO</a>';
+                        } else if (row.id_stage == 3){
+                            return '<button class="btn btn-success btn-sm" onclick="setStage(' + id_order + ', 4)">NOTIFICAR ENTREGA REALIZADA</a>';
+                        }
                     }
                 }
             ]
