--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -87,56 +87,60 @@
 }
 @await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <div class="container">
-    <button onclick="ok()">OK</button>
+    
     <div class="row my-5">
         <div class="col-lg-7 col-md-7 col-sm-12">
             <h3>Crear una cuenta</h3>
             <p>Si es la primera vez que solicitas un pedido, por favor crea tu cuenta.</p>
-            @using (Html.BeginForm("Register", "User", FormMethod.Post, new { id = "frmRegistrarme" }))
+            @using (Html.BeginForm("Register", "User", FormMethod.Post, new { id = "frmRegistrarme", @class="pr-4" }))
             {
                 @Html.AntiForgeryToken()
                 <div class="form-group">
                     <label for="identification">Cédula</label>
                     <input id="identification" name="identification" type="text" class="form-control col-6 effect-8" maxlength="10" />
                 </div>
-                <div class="form-group">
-                    <label for="name">Nombres</label>
-                    <input id="name" name="name" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label for="last_name">Apellido</label>
-                    <input id="last_name" name="last_name" type="text" class="form-control" />
+                <div class="row">
+                    <div class="form-group col-6">
+                        <label for="name">Nombres</label>
+                        <input id="name" name="name" class="form-control" />
+                    </div>
+                    <div class="form-group col-6">
+                        <label for="last_name">Apellidos</label>
+                        <input id="last_name" name="last_name" type="text" class="form-control" />
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="email">Correo electrónico</label>
                     <input id="email" name="email" type="email" class="form-control" />
                 </div>
-                <div class="form-group">
-                    <label for="passsword">Contraseña</label>
-                    <input id="password" name="password" type="password" class="form-control col-6" />
-                </div>
-                <div class="form-group">
-                    <label for="passsword2">Confirmar contraseña</label>
-                    <input id="passsword2" name="passsword2" type="password" class="form-control col-6" />
+                <div class="row">
+                    <div class="form-group col-6">
+                        <label for="passsword">Contraseña</label>
+                        <input id="password" name="password" type="password" class="form-control" />
+                    </div>
+                    <div class="form-group col-6">
+                        <label for="passsword2">Confirmar contraseña</label>
+                        <input id="passsword2" name="passsword2" type="password" class="form-control" />
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="location">Seleccione su ubicación</label>
-                    <input id="location" name="location" type="text" class="form-control col-6" style="cursor:pointer" />
+                    <input id="location" name="location" type="text" class="form-control" style="cursor:pointer" />
                 </div>
 
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block">REGISTRARME</button>
+                    <button type="submit" class="btn back-primary btn-block">REGISTRARME</button>
                 </div>
             }
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12" style="border-left: 1px solid #808080">
+        <div class="col-lg-5 col-md-5 col-sm-12 pl-4" style="border-left: 1px solid #808080">
             <h3>Ingresar a mi cuenta</h3>
             <p>Si ya tienes una cuenta, inicia sesión para procesar tu pedido.</p>
-            @using (Html.BeginForm("Login", "User", FormMethod.Post, new { id = "frmLogin" }))
+            @using (Html.BeginForm("Login", "User", FormMethod.Post, new { id = "frmLogin"}))
             {
                 <div class="form-group">
-                    <label for="username">Correo electrónico</label>
-                    <input id="username" name="username" type="email" class="form-control" />
+                    <label for="username">Usuario</label>
+                    <input id="username" name="username" type="text" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label for="passsword">Contraseña</label>
