--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -355,3 +355,9 @@ input:focus {
 .modal-body {
     overflow-x: auto;
 }
+.error{
+    color: #ff5b0e;
+    font-weight: bold;
+    font-size: 12px;
+    padding-left:5px;
+}
