--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -95,16 +95,16 @@
                 @Html.AntiForgeryToken()
                 <div class="form-group">
                     <label for="identification">Cédula</label>
-                    <input id="identification" name="identification" type="text" class="form-control col-6 effect-8" maxlength="10" required/>
+                    <input id="identification" name="identification" type="text" class="form-control col-6 effect-8 numbers" maxlength="10" required/>
                 </div>
                 <div class="row">
                     <div class="form-group col-6">
                         <label for="name">Nombres</label>
-                        <input id="name" name="name" class="form-control" required/>
+                        <input id="name" name="name" class="form-control letters" required/>
                     </div>
                     <div class="form-group col-6">
-                        <label for="last_name">Apellidos</label>
-                        <input id="last_name" name="last_name" type="text" class="form-control" required/>
+                        <label for="last_name">Apellidos</label >
+                        <input id="last_name" name="last_name" type="text" class="form-control letters" required/>
                     </div>
                 </div>
                 <div class="row">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="form-group col-6">
                         <label for="phone">Celular/Telefono</label>
-                        <input id="phone" name="phone" type="text" class="form-control" required/>
+                        <input id="phone" name="phone" type="text" class="form-control numbers" required/>
                     </div>
                 </div>
                 <div class="row">
@@ -144,7 +144,7 @@
             {
                 <div class="form-group">
                     <label for="username">Usuario</label>
-                    <input id="username" name="username" type="text" class="form-control" required/>
+                    <input id="username" name="username" type="text" class="form-control alphanumeric" required/>
                 </div>
                 <div class="form-group">
                     <label for="passsword">Contraseña</label>
