--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -42,11 +42,12 @@
         <p>&copy; 2021 La Pesca. Reservados todos los derechos.</p>
     </footer>
     <environment include="Development">
-        
+
         <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
         <script src="~/bootstrap/js/bootstrap.js"></script>
         <script src="~/js/sweetalert2.all.min.js"></script>
-        
+        <script src="~/js/main.js"></script>
+
     </environment>
 
     @RenderSection("Scripts", required: false)
