--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
@@ -53,7 +53,7 @@
     <div class="row mt-4">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
             <a href='@Url.Action("Index", "Home")' class="btn bg-black text-white py-2 px-5 ">SEGUIR COMPRANDO</a>
-            <a href='@Url.Action("Checkout", "Order")' class="btn btn-success py-2 px-5 ml-3" >FINALIZAR COMPRA</a>
+            <a href='@Url.Action("Checkout", "Order")' class="btn btn-success py-2 px-5 ml-3" >REALIZAR PEDIDO</a>
         </div>
     </div>
 </div>
